tests/e2e/keyword_or_service_argument.error
Error: syntax error in story at line 1, column 1

1|    service action from: "" or: "" # Idea is to demonstrate argument `or` is parsed successfully.
      ^^^^^^^

E0030: `service` is reserved for future use
