tests/e2e/keyword_or_service_argument.story
service action from: "" or: "" # Idea is to demonstrate argument `or` is parsed successfully.